--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
   },
   "dependencies": {
     "@sanity/client": "^6.24.1",
+    "@sanity/image-url": "^1.1.0",
+    "@sanity/vision": "^3.66.1",
     "next": "15.0.4",
+    "next-sanity": "^9.8.25",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "sanity": "^3.66.1",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@types/node": "^20",
